--- a/package.json
+++ b/package.json
@@ -7,51 +7,34 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RaulArmasBenavides/culqi-frontend.git"
+  },
   "dependencies": {
-    "core-js": "^3.45.1",
+    "@vueuse/core": "^14.1.0",
+    "axios": "^1.13.2",
+    "core-js": "^3.47.0",
     "culqi-frontend": "file:",
-    "vue": "^3.5.20",
+    "pinia": "^3.0.4",
+    "vee-validate": "^4.15.1",
+    "vue": "^3.5.26",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.6.4",
+    "vue-toastification": "^2.0.0-rc.5",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.3",
-    "@babel/eslint-parser": "^7.28.0",
-    "@tailwindcss/cli": "^4.1.12",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@babel/core": "^7.28.5",
+    "@tailwindcss/cli": "^4.1.18",
     "@vue/cli-plugin-babel": "~5.0.9",
-    "@vue/cli-plugin-eslint": "~5.0.9",
     "@vue/cli-plugin-typescript": "~5.0.9",
     "@vue/cli-service": "~5.0.9",
-    "@vue/eslint-config-typescript": "^13.0.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.27.0",
+    "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
     "tailwind": "^4.0.0",
-    "tailwindcss": "^4.1.12",
-    "typescript": "~5.9.2"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended",
-      "@vue/typescript"
-    ],
-    "parserOptions": {
-      "parser": "@typescript-eslint/parser"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+    "tailwindcss": "^4.1.18",
+    "typescript": "~5.9.3",
+    "vue-tsc": "^3.2.1"
+  }
 }
